New commands and Metrics
I have added two new commands:
/timfo
Like the /info command but with tim at the start to avoid conflicts. It
displays some basic info and a version number using .getVersion().
/stats
Shows the players kills, deaths and arrests. The command hasn't been
made to do anything other than send the player a message as the player
KDA isnt being stored any where.

Plugin Metrics has been added (new class file in package) this allows us
to see how many servers are using the plugin (when it goes public) and
how many players are on the servers.

--- a/plugin.yml
+++ b/plugin.yml
@@ -4,4 +4,8 @@ main: com.tammcd.troubleinminecraft.Main
 database: true
 commands:
     join:
-        description: Join the game!
+        description: Join the game.
+    stats:
+        description: Look at your stats.
+    timfo:
+        description: Find info on current version of TIM.
