--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: Trouble in Minecraft
-version: 0.0.24
+version: 0.0.25a
 main: com.tammcd.troubleinminecraft.Main
 database: true
 commands:
@@ -21,4 +21,8 @@ commands:
         description: You will leave the match.
     update:
         description: Updates the plugin.
+    chest:
+        description: Spawns a chest.
+    spectate:
+        description: Fly around.
         
