--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,7 @@ motd: Type /join to join the game!
 voicetype: 
 voiceip: 
 language: 
+auto-update:enable
 #Possible lang files:
 #	en_US
 #	fr_FR (totaly not even real)
